v20060325
	* Fix packaging, so that we now can build an clean rpm with
	just the command-line programs. The mkimage script for the
	embedded system is now within another RPM (udpcast-mkimage)
	which, for the moment, is still constructed the old kludgy
	way.
v20060320
	* Fixed signed-ness issues (revealed by gcc4)
	* By default write files in unsynchronized mode, for better performance
	* Fix case where data address is the same as rendez-vous address.
v20060312
	* Added usage message for --nosync option
v20060309
	* Fix global_client_config handling in udpr-negotiate.c
	* more intuitive/consistent names for various options
v20060208
	* Fix compilation issue (variable declaration after code)
	* Avoid sending connect request twice
v20051223
	* Phase out of most of the way old endianness backwards
	compatibility hacks
	* Mingw compatibility
	* Commands to do more easier unicast
	* Fix Case where Control-C is pressed on receiver right when
	it waits for the "start" keypress
v20051204
	* Suppress excessive timeout messages (only print message
	after 5 timeouts have expired...)
	* use #ifdef i386 instead of ARCH_X86, fix assembler #ifdefs
	in fec.c
	* Fix Makefile to use $(CC) everywhere, rather than hardcoding
	compiler
	* Fix terminal handling (missing optional_action parameter)
v20050226
	* Fixed signed/unsigned bug
v20050217
	* Fixed uninitialized console variable
v20050206
	* Refactoring in console.c: do away with dedicated keyboard
	listener thread in udp-receiver
	* Fixed race condition which may happen at end of FEC
	transmission
	* Fixed a couple of typoes (it is sender, not server...)
	* Refactoring to allow alias interfaces eth0:0
	* CYGWIN compatibility
	* Log key messages (receiver join, etc.) to syslog
v20040417
	Removed explicit reference to busybox version from
	Makefile: from now on, we establish a symbolic link
v20040222
	Minor fixes to v20040221
v20040221
	Adapt for busybox 1.00pre7
v20030831
	Fix bad assertion in FEC mode
v20030706