@@ -273,6 +273,10 @@ pased.</dd>
 <dd>Do not read start signal from keyboard, and do not display any
 message telling the user to press any key to start.</dd>
 
+<dt>--daemon-mode</dt>
+<dd>Do not exit when done, but instead wait for the next batch of
+receivers.</dd>
+
 </dl>
 
 <p>Example:</p>
